--- a/event.html
+++ b/event.html
@@ -7,6 +7,7 @@
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static\css\style.css" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation -->
