--- a/about.html
+++ b/about.html
@@ -35,14 +35,12 @@
     <!-- About Section -->
     <header class="bg-image text-white text-center py-5" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('static/images/header/temple-header.png'); background-size: cover; background-position: center;">
         <div class="header-content">
-            <h1 class="display-4 mb-4">Ulakudaya Perumal Temple</h1>
-            <p class="lead mb-4">"A Place of Tranquility and Spiritual Reflection"</p>
+            <h1 class="display-4 mb-4">About Our Temple</h1>
         </div>
     </header>
 
     <section class="bg-light py-5">
         <div class="container text-center">
-            <h2 class="mb-4">About Our Temple</h2>
             <p class="lead">
                 Ulakudaya Perumal Temple is a sacred space dedicated to spiritual growth, community, and inner peace. Founded over
                 50 years ago, our temple serves as a beacon of hope and tranquility for all who seek spiritual enlightenment and
