--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
             <p class="lead mb-4">"A Place of Tranquility and Spiritual Reflection"</p>
             <a href="about.html" class="btn btn-light text-success">Learn More</a>
         </div>
+        <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
+        <meta http-equiv="Pragma" content="no-cache">
+        <meta http-equiv="Expires" content="0">
+
     </header>
 
     <!-- Temple Images Section -->
