--- a/upi.html
+++ b/upi.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Events - Ulakudaya Perumal Temple</title>
+    <title>Support Us - Ulakudaya Perumal Temple</title>
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static\css\style.css" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation -->
@@ -29,13 +28,13 @@
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="event.html">Events</a>
+                        <a class="nav-link" href="event.html">Events</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-success" href="#">Donate</a>
+                        <a class="btn btn-success" href="support.html">Donate</a>
                     </li>
                 </ul>
             </div>
@@ -45,35 +44,38 @@
     <!-- Header -->
     <header class="bg-light text-center py-5" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('static/images/header/temple-header.png'); background-size: cover; background-position: center; color: white;">
         <div class="container">
-            <h1 class="display-4">Events</h1>
+            <h1 class="display-4">Support Us</h1>
+            <p class="lead">Your generous contributions help maintain the temple and support our services.</p>
         </div>
     </header>
 
-    <!-- Events Section -->
+    <!-- Support Us Section -->
     <section class="container py-5">
-        <h2 class="text-center mb-4">Upcoming Events</h2>
+        <h2 class="text-center mb-4">Donate to the Ulakudaya Perumal Temple</h2>
         <div class="row">
-            <div class="col-md-6 mb-4">
-                <div class="card">
-                    <img src="static/images/events/event1.jpg" class="card-img-top" alt="Event 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Annual Temple Festival</h5>
-                        <p class="card-text">Join us for the grand annual festival featuring traditional rituals, cultural performances, and community feasts.</p>
-                        <p class="card-text"><strong>Date:</strong> March 10, 2025</p>
-                        <p class="card-text"><strong>Time:</strong> 6:00 AM to 9:00 PM</p>
-                    </div>
-                </div>
+            <!-- Donation Information -->
+            <div class="col-md-6">
+                <h4>How Your Contributions Help</h4>
+                <p>Your support helps us with:</p>
+                <ul>
+                    <li>Temple maintenance and renovation</li>
+                    <li>Organizing religious events and festivals</li>
+                    <li>Charitable activities for the community</li>
+                </ul>
+                <p>We appreciate every donation, big or small. Thank you for your kind support.</p>
             </div>
-            <div class="col-md-6 mb-4">
-                <div class="card">
-                    <img src="static/images/events/event2.jpg" class="card-img-top" alt="Event 2">
-                    <div class="card-body">
-                        <h5 class="card-title">Special Pooja Ceremony</h5>
-                        <p class="card-text">Experience the divine blessings of a special pooja ceremony dedicated to Lord Ulakudaya Perumal.</p>
-                        <p class="card-text"><strong>Date:</strong> April 5, 2025</p>
-                        <p class="card-text"><strong>Time:</strong> 7:00 AM to 12:00 PM</p>
-                    </div>
-                </div>
+
+            <!-- UPI Payment Section -->
+            <div class="col-md-6 text-center">
+                <h4>Pay via UPI</h4>
+                <p>Use the button below to make a donation via your preferred UPI app.</p>
+                <a href="upi://pay?pa=temple@upi&pn=Ulakudaya Perumal Temple&mc=&tid=&tr=&tn=Donation for Temple&am=&cu=INR"
+                   class="btn btn-primary btn-lg mb-3">
+                    Pay with UPI
+                </a>
+                <p>Alternatively, scan the QR code below:</p>
+                <img src="static/images/upi-qrcode.png" alt="UPI QR Code" class="img-fluid" style="max-width: 300px;">
+                <p class="mt-3"><strong>UPI ID:</strong> temple@upi</p>
             </div>
         </div>
     </section>
