--- a/about.html
+++ b/about.html
@@ -7,14 +7,15 @@
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static\css\style.css" rel="stylesheet">
+    <!-- Cache-busted CSS -->
+    <link href="static/css/style.css?v=1.0.1" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="static/images/logo/logo.png" alt="Temple Logo" width="50" height="50">
+                <img src="static/images/logo/logo.png?v=1.0.1" alt="Temple Logo" width="50" height="50">
                 Ulakudaya Perumal Temple
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -26,14 +27,14 @@
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="event.html">Events</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                    <li class="nav-item"><a class="btn btn-success" href="#">Donate</a></li>
+                    <li class="nav-item"><a class="btn btn-success" href="upi.html">Donate</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <!-- About Section -->
-    <header class="bg-image text-white text-center py-5" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('static/images/header/temple-header.png'); background-size: cover; background-position: center;">
+    <header class="bg-image text-white text-center py-5" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('static/images/header/temple-header.png?v=1.0.1'); background-size: cover; background-position: center;">
         <div class="header-content">
             <h1 class="display-4 mb-4">About Our Temple</h1>
         </div>
