--- a/contact.html
+++ b/contact.html
@@ -7,14 +7,26 @@
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static\css\style.css" rel="stylesheet">
+
+    <!-- Cache-busted CSS -->
+    <link href="static/css/style.css?v=1.0.2" rel="stylesheet">
+    
+    <!-- Inline styles to override external styles -->
+    <style>
+        .contact-divider {
+            border-left: 2px solid #ccc !important;
+            height: 100% !important;
+            display: block !important;            /* Ensure it's not hidden */
+        }
+    </style>
+
 </head>
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="static/images/logo/logo.png" alt="Temple Logo" width="50" height="50">
+                <img src="static/images/logo/logo.png?v=1.0.1" alt="Temple Logo" width="50" height="50">
                 Ulakudaya Perumal Temple
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -22,28 +34,18 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="event.html">Events</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="contact.html">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn btn-success" href="#">Donate</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="event.html">Events</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="btn btn-success" href="upi.html">Donate</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <!-- Header -->
-    <header class="bg-light text-center py-5" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('static/images/header/temple-header.png'); background-size: cover; background-position: center; color: white;">
+    <header class="bg-light text-center py-5" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('static/images/header/temple-header.png?v=1.0.1'); background-size: cover; background-position: center; color: white;">
         <div class="container">
             <h1 class="display-4">Contact Us</h1>
         </div>
@@ -51,15 +53,22 @@
 
     <!-- Contact Form Section -->
     <section class="container py-5">
-        <h2 class="text-center mb-4">Get in Touch</h2>
         <div class="row">
-            <div class="col-md-6 mb-4">
+            <!-- Contact Details (Left) -->
+            <div class="col-md-5">
                 <h4>Contact Details</h4>
                 <p><strong>Address:</strong> 123 Temple Road, Village Name, State, Country</p>
                 <p><strong>Phone:</strong> +91-9876543210</p>
                 <p><strong>Email:</strong> info@ulakudayaperumaltemple.com</p>
                 <p><strong>Office Hours:</strong> 9:00 AM - 5:00 PM (Monday to Saturday)</p>
             </div>
+
+            <!-- Divider -->
+            <div class="col-md-1 d-none d-md-block text-center">
+                <div class="contact-divider mx-auto"></div>
+            </div>
+
+            <!-- Send Us a Message Form (Right) -->
             <div class="col-md-6">
                 <h4>Send Us a Message</h4>
                 <form action="#" method="post">
