--- a/event.html
+++ b/event.html
@@ -7,14 +7,21 @@
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static\css\style.css" rel="stylesheet">
+    <!-- Cache-busted CSS -->
+    <link href="static/css/style.css?v=1.0.1" rel="stylesheet">
+    <style>
+        .row {
+            display: block !important;            /* Ensure it's not hidden */
+        }
+    </style>
+
 </head>
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="static/images/logo/logo.png" alt="Temple Logo" width="50" height="50">
+                <img src="static/images/logo/logo.png?v=1.0.1" alt="Temple Logo" width="50" height="50">
                 Ulakudaya Perumal Temple
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -22,28 +29,18 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="event.html">Events</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn btn-success" href="#">Donate</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="event.html">Events</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="btn btn-success" href="upi.html">Donate</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <!-- Header -->
-    <header class="bg-light text-center py-5" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('static/images/header/temple-header.png'); background-size: cover; background-position: center; color: white;">
+    <header class="bg-light text-center py-5" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('static/images/header/temple-header.png?v=1.0.1'); background-size: cover; background-position: center; color: white;">
         <div class="container">
             <h1 class="display-4">Events</h1>
         </div>
@@ -55,7 +52,7 @@
         <div class="row">
             <div class="col-md-6 mb-4">
                 <div class="card">
-                    <img src="static/images/events/event1.jpg" class="card-img-top" alt="Event 1">
+                    <img src="static/images/events/event1.jpg?v=1.0.1" class="card-img-top" alt="Event 1">
                     <div class="card-body">
                         <h5 class="card-title">Annual Temple Festival</h5>
                         <p class="card-text">Join us for the grand annual festival featuring traditional rituals, cultural performances, and community feasts.</p>
@@ -66,7 +63,7 @@
             </div>
             <div class="col-md-6 mb-4">
                 <div class="card">
-                    <img src="static/images/events/event2.jpg" class="card-img-top" alt="Event 2">
+                    <img src="static/images/events/event2.jpg?v=1.0.1" class="card-img-top" alt="Event 2">
                     <div class="card-body">
                         <h5 class="card-title">Special Pooja Ceremony</h5>
                         <p class="card-text">Experience the divine blessings of a special pooja ceremony dedicated to Lord Ulakudaya Perumal.</p>
