--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static\css\style.css" rel="stylesheet">
+    <!-- Cache-busted CSS -->
+    <link href="static/css/style.css?v=1.0.1" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="static/images/logo/logo.png" alt="Temple Logo" width="50" height="50">
+                <img src="static/images/logo/logo.png?v=1.0.1" alt="Temple Logo" width="50" height="50">
                 Ulakudaya Perumal Temple
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -26,14 +27,14 @@
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="event.html">Events</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                    <li class="nav-item"><a class="btn btn-success" href="#">Donate</a></li>
+                    <li class="nav-item"><a class="btn btn-success" href="upi.html">Donate</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <!-- Header -->
-    <header class="bg-image text-white text-center py-5" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('static/images/header/temple-header.png'); background-size: cover; background-position: center;">
+    <header class="bg-image text-white text-center py-5" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('static/images/header/temple-header.png?v=1.0.1'); background-size: cover; background-position: center;">
         <div class="header-content">
             <h1 class="display-4 mb-4">Ulakudaya Perumal Temple</h1>
             <p class="lead mb-4">"A Place of Tranquility and Spiritual Reflection"</p>
@@ -42,7 +43,6 @@
         <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
         <meta http-equiv="Pragma" content="no-cache">
         <meta http-equiv="Expires" content="0">
-
     </header>
 
     <!-- Temple Images Section -->
@@ -59,13 +59,13 @@
             <!-- Carousel Items -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="static\images\image1.png" class="d-block w-100" alt="Temple Image 1">
+                    <img src="static/images/image1.png?v=1.0.1" class="d-block w-100" alt="Temple Image 1">
                 </div>
                 <div class="carousel-item">
-                    <img src="static\images\image2.png" class="d-block w-100" alt="Temple Image 2">
+                    <img src="static/images/image2.png?v=1.0.1" class="d-block w-100" alt="Temple Image 2">
                 </div>
                 <div class="carousel-item">
-                    <img src="static\images\image3.png" class="d-block w-100" alt="Temple Image 3">
+                    <img src="static/images/image3.png?v=1.0.1" class="d-block w-100" alt="Temple Image 3">
                 </div>
             </div>
 
