--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Cache-busted CSS -->
     <link href="static/css/style.css?v=1.0.1" rel="stylesheet">
+    <!-- Preload Header Image for Faster Loading -->
+    <link rel="preload" href="static/images/header/temple-header.webp?v=1.0.1" as="image">
 </head>
 <body>
     <!-- Navigation -->
@@ -34,15 +36,12 @@
     </nav>
 
     <!-- Header -->
-    <header class="bg-image text-white text-center py-5" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('static/images/header/temple-header.png?v=1.0.1'); background-size: cover; background-position: center;">
+    <header class="bg-image text-white text-center py-5" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('static/images/header/temple-header.webp?v=1.0.1'); background-size: cover; background-position: center;">
         <div class="header-content">
             <h1 class="display-4 mb-4">Ulakudaya Perumal Temple</h1>
             <p class="lead mb-4">"A Place of Tranquility and Spiritual Reflection"</p>
             <a href="about.html" class="btn btn-light text-success">Learn More</a>
         </div>
-        <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
-        <meta http-equiv="Pragma" content="no-cache">
-        <meta http-equiv="Expires" content="0">
     </header>
 
     <!-- Temple Images Section -->
@@ -51,30 +50,42 @@
         <div id="templeCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
             <!-- Indicators -->
             <div class="carousel-indicators">
-                <button type="button" data-bs-target="#templeCarousel" data-bs-slide-to="0" class="active"></button>
-                <button type="button" data-bs-target="#templeCarousel" data-bs-slide-to="1"></button>
-                <button type="button" data-bs-target="#templeCarousel" data-bs-slide-to="2"></button>
+                <button type="button" data-bs-target="#templeCarousel" data-bs-slide-to="0" class="active" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#templeCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#templeCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
 
             <!-- Carousel Items -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="static/images/image1.png?v=1.0.1" class="d-block w-100" alt="Temple Image 1">
+                    <picture>
+                        <source srcset="static/images/image1-small.webp?v=1.0.1" type="image/webp" media="(max-width: 768px)">
+                        <source srcset="static/images/image1.webp?v=1.0.1" type="image/webp">
+                        <img src="static/images/image1.png?v=1.0.1" class="d-block w-100" alt="Temple front view during the day" loading="lazy">
+                    </picture>
                 </div>
                 <div class="carousel-item">
-                    <img src="static/images/image2.png?v=1.0.1" class="d-block w-100" alt="Temple Image 2">
+                    <picture>
+                        <source srcset="static/images/image2-small.webp?v=1.0.1" type="image/webp" media="(max-width: 768px)">
+                        <source srcset="static/images/image2.webp?v=1.0.1" type="image/webp">
+                        <img src="static/images/image2.png?v=1.0.1" class="d-block w-100" alt="Temple side view during sunset" loading="lazy">
+                    </picture>
                 </div>
                 <div class="carousel-item">
-                    <img src="static/images/image3.png?v=1.0.1" class="d-block w-100" alt="Temple Image 3">
+                    <picture>
+                        <source srcset="static/images/image3-small.webp?v=1.0.1" type="image/webp" media="(max-width: 768px)">
+                        <source srcset="static/images/image3.webp?v=1.0.1" type="image/webp">
+                        <img src="static/images/image3.png?v=1.0.1" class="d-block w-100" alt="Temple during evening lights" loading="lazy">
+                    </picture>
                 </div>
             </div>
 
             <!-- Controls -->
-            <button class="carousel-control-prev" type="button" data-bs-target="#templeCarousel" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#templeCarousel" data-bs-slide="prev" aria-label="Previous Slide">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#templeCarousel" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#templeCarousel" data-bs-slide="next" aria-label="Next Slide">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
