--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="static/images/logo/logo.png?v=1.0.1" alt="Temple Logo" width="50" height="50">
-                Ulakudaya Perumal Temple
+                <img src="static/images/logo/logo.png?v=1.0.1" alt="Temple Logo" height="30">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
