--- a/upi.html
+++ b/upi.html
@@ -59,9 +59,8 @@
             <a class="navbar-brand" href="index.html">
                 <picture>
                     <source srcset="static/images/logo/logo.webp?v=1.0.1" type="image/webp">
-                    <img src="static/images/logo/logo.png?v=1.0.1" alt="Temple Logo" width="50" height="50">
+                    <img src="static/images/logo/logo.png?v=1.0.1" alt="Temple Logo" height="30">
                 </picture>
-                Ulakudaya Perumal Temple
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
