--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Cache-busted CSS -->
     <link href="static/css/style.css?v=1.0.1" rel="stylesheet">
+    <style>
+        /* Header background fallback for browsers without WebP support */
+        .header-background {
+            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('static/images/header/temple-header.png?v=1.0.1');
+            background-size: cover;
+            background-position: center;
+            color: white;
+        }
+
+        /* If WebP is supported, use the WebP version */
+        @supports (background-image: url("data:image/webp;base64,UklGRh4AAABXRUJQVlA4TCEAAAAvAAAAHEpIQkAASAAAAAAAAAAAAPbWcyc=")) {
+            .header-background {
+                background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('static/images/header/temple-header.webp?v=1.0.1');
+            }
+        }
+    </style>
     <!-- Preload Header Image for Faster Loading -->
     <link rel="preload" href="static/images/header/temple-header.webp?v=1.0.1" as="image">
 </head>
@@ -17,7 +33,10 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="static/images/logo/logo.png?v=1.0.1" alt="Temple Logo" height="30">
+                <picture>
+                    <source srcset="static/images/logo/logo.webp?v=1.0.1" type="image/webp">
+                    <img src="static/images/logo/logo.png?v=1.0.1" alt="Temple Logo" height="30">
+                </picture>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -35,8 +54,8 @@
     </nav>
 
     <!-- Header -->
-    <header class="bg-image text-white text-center py-5" style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('static/images/header/temple-header.webp?v=1.0.1'); background-size: cover; background-position: center;">
-        <div class="header-content">
+    <header class="text-white text-center py-5 header-background">
+        <div class="container">
             <h1 class="display-4 mb-4">Ulakudaya Perumal Temple</h1>
             <p class="lead mb-4">"A Place of Tranquility and Spiritual Reflection"</p>
             <a href="about.html" class="btn btn-light text-success">Learn More</a>
