--- a/index.html
+++ b/index.html
@@ -77,21 +77,21 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <picture>
-                        <source srcset="static/images/image1-small.webp?v=1.0.1" type="image/webp" media="(max-width: 768px)">
+                        <source srcset="static/images/image1.webp?v=1.0.1" type="image/webp">
                         <source srcset="static/images/image1.webp?v=1.0.1" type="image/webp">
                         <img src="static/images/image1.png?v=1.0.1" class="d-block w-100" alt="Temple front view during the day" loading="lazy">
                     </picture>
                 </div>
                 <div class="carousel-item">
                     <picture>
-                        <source srcset="static/images/image2-small.webp?v=1.0.1" type="image/webp" media="(max-width: 768px)">
+                        <source srcset="static/images/image2.webp?v=1.0.1" type="image/webp">
                         <source srcset="static/images/image2.webp?v=1.0.1" type="image/webp">
                         <img src="static/images/image2.png?v=1.0.1" class="d-block w-100" alt="Temple side view during sunset" loading="lazy">
                     </picture>
                 </div>
                 <div class="carousel-item">
                     <picture>
-                        <source srcset="static/images/image3-small.webp?v=1.0.1" type="image/webp" media="(max-width: 768px)">
+                        <source srcset="static/images/image3.webp?v=1.0.1" type="image/webp">
                         <source srcset="static/images/image3.webp?v=1.0.1" type="image/webp">
                         <img src="static/images/image3.png?v=1.0.1" class="d-block w-100" alt="Temple during evening lights" loading="lazy">
                     </picture>
