--- a/contact.html
+++ b/contact.html
@@ -83,6 +83,8 @@
             <div class="col-md-1 d-none d-md-block text-center">
                 <div class="contact-divider mx-auto"></div>
             </div>
+        </div>
+    </section>
 
     <!-- Google Maps Section -->
     <section class="container py-5">
